set(CMAKE_SHARED_MODULE_PREFIX "")

add_subdirectory(uAI)
add_subdirectory(uCollision)
add_subdirectory(uCore)
add_subdirectory(uEditor)
add_subdirectory(uGame)
add_subdirectory(uInput)
add_subdirectory(uParticles)
#add_subdirectory(uPhysics)
add_subdirectory(uRender)
add_subdirectory(uRenderDebug)
add_subdirectory(uScript)
add_subdirectory(uSkeleton)
add_subdirectory(uSound)
add_subdirectory(uUI)

add_subdirectory(uEngine)
add_subdirectory(uScriptDebugger)